remove fixed top class in header and set it in header.scss file to use z-index

--- a/static/sass/layouts/_header.scss
+++ b/static/sass/layouts/_header.scss
@@ -1,4 +1,9 @@
 /*=========================================================================================*/
+header{
+    position: fixed;
+    top: 0%;
+    z-index: 1;
+}
 .form_search{
     height: $form-search-height-md;
     border-radius: 3px;
